# road_seg

./: .gitignore  Main.ipynb  README.md  pyproject.toml
data/: 01-basic.ply  90_degree_turn.ply  bendy.ply  circular.ply  highway.ply  intersection.ply  roundabout.ply  straight_road.ply
evaluators/: frechet.py  frechet_test.py  hausdorff.py  hausdorff_test.py  interfaces.py
model/: line_segment.py  line_segment_test.py  point.py  visualizer.py
snippets/: draw_line_segment.py  manually_specify_pointcloud.py  pick_points.py  visualize_pc.py  visualize_something.py
util/: ply_parser.py  point_cloud.py  point_cloud_test.py
