[tool.poetry]
name = "road-seg"
version = "0.1.0"
description = "Point cloud road classification and segmentation challenge. Find the best line segment that represents the road based on the given point clouds."
authors = ["Tony Truong <serinth@gmail.com>"]
license = "GPL"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
open3d = "^0.18.0"
jupyterlab = "^4.2.4"
scikit-learn = "^1.5.1"
addict = "^2.4.0"
pillow = "^10.4.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
numpy = "^1.26.4"
pyyaml = "^6.0.2"
tqdm = "^4.66.5"
pyquaternion = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
